@@ -555,7 +555,9 @@ for the custom option type; pointers to the four procedures; and a
 \fIclientData\fR value to be passed to those procedures when they are
 invoked.  The \fIclientData\fR value typically points to a structure
 containing information that is needed by the procedures when they are
-parsing and printing options.
+parsing and printing options.  \fIRestoreProc\fR and \fIfreeProc\fR
+may be NULL, indicating that no function should be called for those
+operations.
 .PP
 The \fIsetProc\fR procedure is invoked by \fBTk_SetOptions\fR to
 convert a Tcl_Obj into an internal representation and store the
